refactor: remove the bank statement import
